<resources>
    <string name="app_name">PhotoEditor</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="hello_my_friend">Hello, my friend!</string>
    <string name="iconfirst">iconFirst</string>
    <string name="back">Back</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
</resources>