<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buttonRegistr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="244dp"
        android:textColor="@color/light2_green"
        android:layout_height="68dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="83dp"
        android:backgroundTint="@color/green"
        android:onClick="back"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/nameRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light2_green"
        android:layout_marginStart="158dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="159dp"
        android:text="@string/registration"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="244dp"
        android:layout_height="68dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="@color/green"
        android:text="@string/registration"
        android:textColor="@color/light2_green"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inptPasswordRepeat" />

    <EditText
        android:id="@+id/inputLogin"
        android:layout_width="289dp"
        android:layout_height="57dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="51dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameRG"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/inptPasswordRepeat"
        android:layout_width="289dp"
        android:layout_height="57dp"
        android:layout_marginStart="50dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteY="460dp" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="289dp"

        android:layout_height="57dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-280dp"
        android:layout_marginTop="80dp"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/light2_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/inputLogin"
        app:layout_constraintTop_toBottomOf="@+id/nameRG"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-280dp"
        android:layout_marginTop="15dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/light2_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputLogin"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textPasswordRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-280dp"
        android:layout_marginTop="15dp"
        android:text="@string/repeat_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/light2_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/inptPasswordRepeat"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>