<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_green">

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="251dp"
        android:layout_height="71dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/green"
        android:onClick="registr"
        android:text="@string/registration"
        android:textColor="@color/light2_green"
        android:textSize="25sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonAuthorization"
        android:layout_width="252dp"
        android:layout_height="71dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/green"
        android:text="@string/login"
        android:textColor="@color/light2_green"
        android:textSize="25sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistration"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.489"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="69dp" />

    <TextView
        android:id="@+id/textHello"
        android:layout_width="326dp"
        android:layout_height="67dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="34dp"
        android:fontFamily="@font/adamina"
        android:text="@string/hello_my_friend"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/green"
        android:textSize="40sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck,TextContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="294dp"
        android:layout_height="281dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="211dp">

        <TextView
            android:id="@+id/textView_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/light2_green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_login"
            android:layout_width="289dp"
            android:layout_height="57dp"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/rounded_input"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.958"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameRG"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/light2_green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_Password"
            android:layout_width="289dp"
            android:layout_height="57dp"
            android:layout_marginTop="15dp
"
            android:autofillHints=""
            android:background="@drawable/rounded_input"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.958"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameRG"

            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>